<resources>
    <string name="app_name">ProjetAndroid2017</string>
    <string name="action_settings">Settings</string>
    <string name="titre">Deuxieme Main</string>
    <string name="titreNewArticle">Poste un article</string>
    <string name="titreDesc">Descriptif article</string>
    <string name="titreRecPrix">Recherche par prix</string>
    <string name="titreRechVille">Recherche par ville</string>
    <string name="titreResRech">Articles trouvés</string>
    <string name="titreVille">Villes</string>
    <string name="nom">Nom</string>
    <string name="prix">Prix</string>
    <string name="desc">Description</string>
    <string name="ville">Ville</string>
    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="bruxelles">Bruxelles</string>
    <string name="mons">Mons</string>
    <string name="liege">Liège</string>
    <string name="namur">Namur</string>
    <string name="arlon">Arlon</string>
    <string name="waterloo">Waterloo</string>
    <string name="charleroi">Charleroi</string>
    <string name="accepter">Accepter</string>
    <string name="recherche">Recherche</string>
    <string name="retour">Retour</string>
    <string name="suivant">Suivant</string>
    <string name="precedent">Precedent</string>
    <string name="newArticle">Ajout Article</string>
    <string name="rechPrix">Recherche par Prix</string>
    <string name="rechVille">Recherche par Ville</string>
    <string name="etat1">Neuf</string>
    <string name="etat2">Utilisé</string>
    <string name="info1">peut être envoyé</string>
    <string name="info2">à retiré en mains propres</string>
    <string name="enteteInfo">Comment recuperer </string>
    <string name="enteteEtat">Etat de l\' article</string>
    <string name="enteteTri">Ordre d\'affichage</string>
    <string name="croissant">Croissant</string>
    <string name="decroissant">Decroissant</string>
</resources>
