<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.martin.projetandroid2017.MainActivity">
        <TextView
            style="@style/titre"/>
        <TextView
            style="@style/sousTitre"
            android:text="@string/titreVille" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/groupe">
            <RadioButton
                style="@style/rb_ville"
                android:text="@string/bruxelles"
                android:checked="true"
                android:id="@+id/bruxelles"/>
            <RadioButton
                style="@style/rb_ville"
                android:text="@string/mons"
                android:id="@+id/mons"/>
            <RadioButton
                style="@style/rb_ville"
                android:text="@string/liege"
                android:id="@+id/liege"/>
            <RadioButton
                style="@style/rb_ville"
                android:text="@string/namur"
                android:id="@+id/namur"/>
            <RadioButton
                style="@style/rb_ville"
                android:text="@string/arlon"
                android:id="@+id/arlon"/>
            <RadioButton
                style="@style/rb_ville"
                android:text="@string/waterloo"
                android:id="@+id/waterloo"/>
            <RadioButton
                style="@style/rb_ville"
                android:text="@string/charleroi"
                android:id="@+id/charleroi"/>
        </RadioGroup>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/btn_valider"
                android:text="@string/accepter"
                android:id="@+id/villeAccepter"/>
            <Button
                style="@style/btn_retour"
                android:text="@string/retour"
                android:id="@+id/villeRetour"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>