<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.martin.projetandroid2017.MainActivity">
        <TextView
            style="@style/titre"/>
        <TextView
            style="@style/sousTitre"
            android:text="@string/newArticle"/>
        <TextView
            style="@style/tv_erreur"
            android:id="@+id/ajoutErreur"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <EditText
                style="@style/et_new"
                android:hint="@string/nom"
                android:id="@+id/ajoutNom"/>
            <EditText
                style="@style/et_new"
                android:hint="@string/prix"
                android:id="@+id/ajoutPrix"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/et_new"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/ville"
                    android:id="@+id/ajoutVille"/>
                <Button
                    style="@style/btn_wizard"
                    android:id="@+id/ajoutWizard"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enteteEtat"
               />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/etat"
                android:layout_margin="15dp"
                >
                <RadioButton
                    android:id="@+id/neuf"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/etat1"
                    android:onClick="onRadioBtnClickedEtat"
                    />
                <RadioButton
                    android:id="@+id/utilise"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/etat2"
                    android:checked="true"
                    android:onClick="onRadioBtnClickedEtat"
                   />
            </RadioGroup>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/enteteInfo"
                    />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/info"
                android:layout_margin="15dp">
                <RadioButton
                    android:id="@+id/Aretire"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/info1"
                    android:checked="true"
                    android:onClick="onRadioBtnClickedInfo"
                   />
                <RadioButton
                    android:id="@+id/Aenvoyer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/info2"
                    android:onClick="onRadioBtnClickedInfo"
                    />
            </RadioGroup>
            </RelativeLayout>
            <EditText
                style="@style/et_ajoutDesc"
                android:hint="@string/desc"
                android:id="@+id/ajoutDesc"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/btn_valider"
                android:text="@string/accepter"
                android:id="@+id/ajoutAccepter"/>
            <Button
                style="@style/btn_retour"
                android:text="@string/retour"
                android:id="@+id/ajoutRetour"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>