<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.martin.projetandroid2017.MainActivity">
        <TextView
            style="@style/titre"/>
        <TextView
            style="@style/sousTitre"
            android:text="@string/titreRecPrix"/>
        <TextView
            style="@style/tv_erreur"
            android:id="@+id/rechPrixErreur"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <EditText
                style="@style/et_rechPrix"
                android:hint="@string/min"
                android:id="@+id/rechPrixMin"/>
            <EditText
                style="@style/et_rechPrix"
                android:hint="@string/max"
                android:id="@+id/rechPrixMax"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enteteTri"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/tri"
                android:layout_margin="15dp">
                <RadioButton
                    android:id="@+id/triCroissant"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/croissant"
                    android:checked="true"
                    android:onClick="onRadioBtnClickedTri"
                    />
                <RadioButton
                    android:id="@+id/triDecroissant"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/decroissant"
                    android:onClick="onRadioBtnClickedTri"
                    />
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/btn_valider"
                android:text="@string/recherche"
                android:id="@+id/rechPrixRech"/>
            <Button
                style="@style/btn_retour"
                android:text="@string/retour"
                android:id="@+id/rechPrixRetour"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>