<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.martin.projetandroid2017.MainActivity">
        <TextView
            style="@style/titre"/>
        <TextView
            style="@style/sousTitre"
            android:text="@string/titreResRech"/>
        <TextView
            style="@style/tv_erreur"
            android:id="@+id/resRechErreur"/>
        <TextView
            style="@style/tv_res"
            android:id="@+id/resRechArticle1"/>
        <TextView
            style="@style/tv_res"
            android:id="@+id/resRechArticle2"/>
        <TextView
            style="@style/tv_res"
            android:id="@+id/resRechArticle3"/>
        <TextView
            style="@style/tv_res"
            android:id="@+id/resRechArticle4"/>
        <TextView
            style="@style/tv_res"
            android:id="@+id/resRechArticle5"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/btn_valider"
                android:text="@string/precedent"
                android:id="@+id/resRechPrecedent"/>
            <Button
                style="@style/btn_retour"
                android:text="@string/suivant"
                android:id="@+id/resRechSuivant"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/btn_retour"
                android:text="@string/retour"
                android:id="@+id/resRechRetour"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>