<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.martin.projetandroid2017.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/titre"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <Button
                style="@style/btn_main"
                android:text="@string/titreNewArticle"
                android:id="@+id/newArt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <Button
                style="@style/btn_main"
                android:text="@string/rechPrix"
                android:id="@+id/rechPrix"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <Button
                style="@style/btn_main"
                android:text="@string/rechVille"
                android:id="@+id/rechVille"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
